firefox: open standard pages right away

--- a/files/Desktop/Firefox-Webex.desktop
+++ b/files/Desktop/Firefox-Webex.desktop
@@ -3,5 +3,5 @@ Encoding=UTF-8
 Type=Application
 Name=genivi.webex.com
 Icon=/usr/share/icons/nuoveXT2/72x72/apps/firefox-icon.png
-Exec=/usr/bin/firefox https://genivi.webex.com
+Exec=/home/vagrant/bin/firefox_wrapper.sh
 
