Remove WebEx support, keep Zoom.
+ Update README accordingly. (Master branch will likely keep Zoom only
from now on.  Another branch will keep WebEx legacy version but
might not be updated)

--- a/files/Desktop/Firefox-Webex.desktop
+++ b/files/Desktop/Firefox-Webex.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Application
-Name=genivi.webex.com
+Name=genivi.zoom.com
 Icon=/usr/share/icons/nuoveXT2/72x72/apps/firefox-icon.png
 Exec=/home/vagrant/bin/firefox_wrapper.sh
 
